[gd_scene load_steps=22 format=3 uid="uid://5rdkceb8frqw"]

[ext_resource type="Script" path="res://Actors/Player/player.gd" id="1_6sfi4"]
[ext_resource type="Resource" uid="uid://3y2cdy74dhsn" path="res://Actors/Player/player_move_stats.tres" id="2_buxuv"]
[ext_resource type="PackedScene" uid="uid://c1wy8bd4a5us6" path="res://Components/Jumping/jump_component.tscn" id="2_yrs3k"]
[ext_resource type="Texture2D" uid="uid://djvbkibgi8whf" path="res://Assets/Sprites/Player/Player_Spritesheet.aseprite" id="3_dn4lt"]
[ext_resource type="PackedScene" uid="uid://ba0doa040rdwp" path="res://Components/Input/input_component.tscn" id="3_js0gb"]
[ext_resource type="PackedScene" uid="uid://yn8mnupom0tf" path="res://Components/Gravity/gravity_component.tscn" id="4_40eek"]
[ext_resource type="PackedScene" uid="uid://blbw63k24k8n6" path="res://Components/Animations/animation_component.tscn" id="5_rivup"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8a78l"]
radius = 1.0
height = 6.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5a000"]
size = Vector2(21.6667, 18.1818)

[sub_resource type="AtlasTexture" id="AtlasTexture_h11nq"]
atlas = ExtResource("3_dn4lt")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpeon"]
atlas = ExtResource("3_dn4lt")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftfwo"]
atlas = ExtResource("3_dn4lt")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o573a"]
atlas = ExtResource("3_dn4lt")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hjoc"]
atlas = ExtResource("3_dn4lt")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_542ui"]
atlas = ExtResource("3_dn4lt")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmjrf"]
atlas = ExtResource("3_dn4lt")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfy01"]
atlas = ExtResource("3_dn4lt")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3pc5o"]
atlas = ExtResource("3_dn4lt")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4cj8"]
atlas = ExtResource("3_dn4lt")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6br4d"]
atlas = ExtResource("3_dn4lt")
region = Rect2(64, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_getxw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h11nq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpeon")
}],
"loop": true,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftfwo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o573a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hjoc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_542ui")
}],
"loop": true,
"name": &"Idle",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmjrf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfy01")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pc5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4cj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6br4d")
}],
"loop": true,
"name": &"Move",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("gravity", "input", "animations", "jump", "player_detection") groups=["Player"]]
position = Vector2(26, 30)
collision_layer = 2
collision_mask = 63
script = ExtResource("1_6sfi4")
gravity = NodePath("Components/GravityComponent")
input = NodePath("Components/InputComponent")
animations = NodePath("Components/AnimationComponent")
jump = NodePath("Components/jump_component")
player_detection = NodePath("PlayerHitbox")
player_move = ExtResource("2_buxuv")
metadata/_edit_group_ = true

[node name="PlayerHitbox" type="Area2D" parent="."]
scale = Vector2(1.28, 1)
collision_layer = 2
collision_mask = 31

[node name="HitboxShape" type="CollisionShape2D" parent="PlayerHitbox"]
shape = SubResource("CapsuleShape2D_8a78l")
debug_color = Color(0.653799, 0.509909, 0.257708, 0.42)

[node name="PlayerBody" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -5)
scale = Vector2(0.6, 0.88)
shape = SubResource("RectangleShape2D_5a000")

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -5)
sprite_frames = SubResource("SpriteFrames_getxw")
animation = &"Move"

[node name="Components" type="Node" parent="."]

[node name="jump_component" parent="Components" instance=ExtResource("2_yrs3k")]
jump_height = -425.0
jumpbuffer_window = 0.02

[node name="InputComponent" parent="Components" instance=ExtResource("3_js0gb")]

[node name="GravityComponent" parent="Components" instance=ExtResource("4_40eek")]

[node name="AnimationComponent" parent="Components" node_paths=PackedStringArray("sprite") instance=ExtResource("5_rivup")]
sprite = NodePath("../../PlayerSprite")
